force-app/main/default/objects/OpportunityLineItem/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <type>Lookup</type>
    <referenceTo>Asset</referenceTo>
    <relationshipName>OpportunityLineItems</relationshipName>
    <relationshipLabel>Reservation Line Items</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>