force-app/main/default/objects/OpportunityLineItem/fields/cUnite__Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>cUnite__Number_of_Guests__c</fullName>
    <label>Number of Guests</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>